--- a/Backend/package.json
+++ b/Backend/package.json
@@ -9,12 +9,13 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
-    "express": "^4.16.3",
-    "mongoose": "^5.7.7",
     "client-sessions": "^0.8.0",
     "cookie-parser": "~1.4.4",
+    "express": "^4.16.3",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1"
+    "mongoose": "^5.7.7",
+    "morgan": "~1.9.1",
+    "zoomus": "^0.1.4"
   },
   "author": "",
   "license": "ISC"
