--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,6 +13,7 @@
     "cookie-parser": "~1.4.4",
     "express": "^4.16.3",
     "http-errors": "~1.6.3",
+    "mongoosastic": "^4.6.0",
     "mongoose": "^5.7.7",
     "morgan": "~1.9.1",
     "zoomus": "^0.1.4"
